--- a/disguise.html
+++ b/disguise.html
@@ -21,6 +21,10 @@
 			color: red;
 		}
 
+    lime {
+			color: lime;
+		}
+
 		#chatbox {
 			width: 100%;
 			height: 100%;
@@ -244,7 +248,7 @@
 	<div id="utils">
 		<center>
 			<div id="utility-header">
-				<h1 id="header">Disguise Page <red>(DOESN'T WORK RIGHT NOW!)</red>
+				<h1 id="header">Disguise Page <green>(WORKS!!)</green>
 				</h1>
 			</div>
 			<button id="change-to-drive">Google Drive<br><img src="https://drive.google.com/favicon.ico" width="30px" height="auto" alt="Google Drive Icon"></button>
