fixed lime color in disguise.html

--- a/disguise.html
+++ b/disguise.html
@@ -248,7 +248,7 @@
 	<div id="utils">
 		<center>
 			<div id="utility-header">
-				<h1 id="header">Disguise Page <green>(WORKS!!)</green>
+				<h1 id="header">Disguise Page <lime>(WORKS!!)</lime>
 				</h1>
 			</div>
 			<button id="change-to-drive">Google Drive<br><img src="https://drive.google.com/favicon.ico" width="30px" height="auto" alt="Google Drive Icon"></button>
