added tabcloak and browser

--- a/chatbox.html
+++ b/chatbox.html
@@ -495,6 +495,8 @@
 			<li><a onclick="" href="custom-room.html">Custom Chatbox Rooms (NEW!)</a></li>
 			<li><a href="potato-clicker.html">Potato Clicker Game</a></li>
 			<li><a href="cps.html">Clicks Per Second Counter</a></li>
+      <li><a href="tab-cloak">Tab Cloak (NEW!)</a></li>
+      <li><a href="browser.html">Browser (NEW!)</a></li>
 		</ul>
 	</div>
 
@@ -861,7 +863,6 @@
 		//Hide chatbox before logging in
 		hideElement("chatbox-input");
 		hideElement("chatbox-messages");
-		5
 		hideElement("online-users");
 
 		// Get login button & add auth
