--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 #clh {
   color: white;
   text-align: center;
+  margin-top: 10;
 }
 
 #changelog-container {
@@ -311,6 +312,8 @@
 			<li><a onclick="" href="custom-room.html">Custom Chatbox Rooms (NEW!)</a></li>
 			<li><a href="potato-clicker.html">Potato Clicker Game</a></li>
       <li><a href="cps.html">Clicks Per Second Counter</a></li>
+      <li><a href="tab-cloak">Tab Cloak (NEW!)</a></li>
+      <li><a href="browser.html">Browser (NEW!)</a></li>
 		</ul>
 	</div>
 
@@ -328,6 +331,13 @@
   <div id="changelog-section">
 	<div id="changelog-container">
 		<ul>
+      <li>
+				<h3>v1.1</h3>
+				<ul>
+					<li>Added cloak tab feature (more info on the actual feature)</li>
+					<li>Added special browser (more info on the actual feature)</li>
+				</ul>
+			</li>
 			<li>
 				<h3>v1.0</h3>
 				<ul>
