--- a/index.html
+++ b/index.html
@@ -332,6 +332,13 @@
 	<div id="changelog-container">
 		<ul>
       <li>
+				<h3>v1.2</h3>
+				<ul>
+					<li>Increased browser size in the browser feature</li>
+					<li>Fixed custom room link codes not working</li>
+				</ul>
+			</li>
+      <li>
 				<h3>v1.1</h3>
 				<ul>
 					<li>Added cloak tab feature (more info on the actual feature)</li>
