fixed tab-cloak navlink

--- a/cps.html
+++ b/cps.html
@@ -136,7 +136,7 @@
         <li><a onclick="" href="custom-room.html">Custom Chatbox Rooms (NEW!)</a></li>
         <li><a href="potato-clicker.html">Potato Clicker Game</a></li>
         <li><a href="cps.html">Clicks Per Second Counter</a></li>
-        <li><a href="tab-cloak">Tab Cloak (NEW!)</a></li>
+        <li><a href="tab-cloak.html">Tab Cloak (NEW!)</a></li>
       <li><a href="browser.html">Browser (NEW!)</a></li>
       </ul>
     </div>
