--- a/browser.html
+++ b/browser.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <title>Browser</title>
+    <script src="https://kit.fontawesome.com/92f9e229dd.js" crossorigin="anonymous"></script>
     <style>
       /* Navigation drawer */
 		#nav-drawer {
@@ -98,6 +99,29 @@
 			  color: #FFFFFF;
         font-size: 20px;
 		  }
+      #browser-bar {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 50px;
+  background-color: #333;
+}
+
+#browser-bar button {
+  margin: 0 10px;
+  padding: 10px;
+  border: none;
+  border-radius: 5px;
+  background-color: #555;
+  color: white;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+#browser-bar button:hover {
+  background-color: #777;
+}
+
     </style>
   </head>
   <body>
@@ -108,7 +132,12 @@
     <center>
       <p>This is a browser which unblocks almost every site (one site that it doesnt allow for some reason is discord) but it might be a bit slow so be patient. (also if you're wondering this site also works with the tab cloak feature, just paste this into it <b>chetbox.ga/browser.html</b> or <b>browser.chetbox.ga</b>)</p>
       <br><br>
-      <iframe src="https://browser.chetbox.ga" style="width: 100%; height: 98vh;"></iframe>
+      <div id="browser-bar">
+        <button id="back-btn" onclick="window.history.back()"><i class="fa-solid fa-arrow-left"></i></button>
+        <button id="forward-btn" onclick="window.history.forward()"><i class="fa-solid fa-arrow-right"></i></button>
+      </div>
+
+      <iframe id="browser-iframe" src="https://browser.chetbox.ga" style="width: 100%; height: 94vh;"></iframe>
     </center>
     <div id="nav-drawer">
 		<!-- Navigation items -->
