--- a/index.html
+++ b/index.html
@@ -331,6 +331,12 @@
   <div id="changelog-section">
 	<div id="changelog-container">
 		<ul>
+      <li>
+				<h3>v1.4</h3>
+				<ul>
+					<li>Added back and forward button to browser </li>
+				</ul>
+			</li>
        <li>
 				<h3>v1.3</h3>
 				<ul>
