--- a/custom-room.html
+++ b/custom-room.html
@@ -20,6 +20,12 @@
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css">
 	<style>
 		/* CSS */
+    #footer {
+      position: fixed;
+      bottom: 0;
+      width: 100%;
+      background-color: #2C2F33;
+    }
     .modal {
 			position: fixed;
 			top: 50%;
@@ -142,7 +148,7 @@
 
 		#scrollBtn {
 			font-size: 20px;
-			bottom: 30px;
+			bottom: 270px;
 			right: 30px;
 			background-color: skyblue;
 			border: none;
@@ -633,19 +639,23 @@
 			<ul id="messages-list" style="overflow: hidden;">
 				<!-- messages will be appended here -->
 			</ul>
+      <br><br><br><br><br><br><br><br><br><br><br><br>
+      <br id="latest">
 		</div>
-		<div id="chatbox-input">
-			<input type="text" id="message-input" placeholder="Type your message here...">
-			<button id="insert-image">📷</button>
-			<button class="microphone-rec" id="recordButton"><i class="fa-solid fa-microphone"></i></button>
-			<button id="send-button">Send</button>
-			<button id="scrollBtn" style="display:none; position: fixed;">&#9660;</button>
-		</div>
-		<div id="online-users">
-			<h3>Online Users:</h3>
-			<ul id="online-users-list">
-			</ul>
-		</div>
+    <div id="footer">
+		  <div id="chatbox-input">
+			 <input type="text" id="message-input" placeholder="Type your message here...">
+			 <button id="insert-image">📷</button>
+			 <button class="microphone-rec" id="recordButton"><i class="fa-solid fa-microphone"></i></button>
+			 <button id="send-button">Send</button>
+			 <button id="scrollBtn" style="display:none; position: fixed;">&#9660;</button>
+		  </div>
+		  <div id="online-users">
+			 <h3>Online Users:</h3>
+			 <ul id="online-users-list">
+			 </ul>
+		  </div>
+    </div>
 
 	</div>
 
@@ -1291,26 +1301,8 @@
 
 
 				document.getElementById("scrollBtn").addEventListener("click", function() {
-					let target = document.getElementById("send-button").offsetTop;
-					let start = window.pageYOffset;
-					let duration = 1500; // milliseconds
-					let step = 20; // milliseconds
-
-					let scroll = setInterval(function() {
-						let offset = window.pageYOffset;
-						let diff = target - offset;
-
-						if (diff <= 0) {
-							clearInterval(scroll);
-						} else {
-							window.scrollTo(0, offset + diff / duration * step);
-						}
-					}, step);
-
-					setTimeout(function() {
-						clearInterval(scroll);
-					}, duration);
-				});
+          document.getElementById("latest").scrollIntoView();
+        });
 
 				setTimeout(function() {
 					if (isUserOwner === true) {
@@ -1389,8 +1381,8 @@
 										messageElement.innerHTML =
 											"<b>" + pfp + '<button class="delete-button" data-message-id="' + snapshot.key + '"><i class="fa-sharp fa-solid fa-trash"></i></button> ' + dateString + ' ' + timeString + ' - ' + message.user + ":<br><br></b>&nbsp;" +
 											parseLinksAndEmojis(removeHtmlTags(message.message));
-										document.getElementById("send-button").scrollIntoView();
-setTimeout(()=>{document.getElementById("send-button").scrollIntoView();},500);
+										document.getElementById("latest").scrollIntoView();
+setTimeout(()=>{document.getElementById("latest").scrollIntoView();},500);
 									} else {
 										if (isUserOwner !== true) {
 											console.log("you aint za owner");
@@ -1401,8 +1393,8 @@ setTimeout(()=>{document.getElementById("send-button").scrollIntoView();},500);
 										messageElement.innerHTML =
 												"<b>" + pfp + dateString + ' ' + timeString + ' - ' + message.user + ":<br><br></b>&nbsp;" +
 												parseLinksAndEmojis(removeHtmlTags(message.message));
-											//document.getElementById("send-button").scrollIntoView();
-setTimeout(()=>{document.getElementById("send-button").scrollIntoView();},500);
+											//document.getElementById("latest").scrollIntoView();
+setTimeout(()=>{document.getElementById("latest").scrollIntoView();},500);
 										} else {
 											console.log("you za owner");
 											messageElement.classList.remove("yours");
@@ -1412,8 +1404,8 @@ setTimeout(()=>{document.getElementById("send-button").scrollIntoView();},500);
 										messageElement.innerHTML =
 												"<b>" + pfp + '<button class="delete-button" data-message-id="' + snapshot.key + '"><i class="fa-sharp fa-solid fa-trash"></i></button> ' + dateString + ' ' + timeString + ' - ' + message.user + ":<br><br></b>&nbsp;" +
 												parseLinksAndEmojis(removeHtmlTags(message.message));
-											//document.getElementById("send-button").scrollIntoView();
-setTimeout(()=>{document.getElementById("send-button").scrollIntoView();},500);
+											//document.getElementById("latest").scrollIntoView();
+setTimeout(()=>{document.getElementById("latest").scrollIntoView();},500);
 										}
 
 									}
@@ -1428,8 +1420,8 @@ setTimeout(()=>{document.getElementById("send-button").scrollIntoView();},500);
 										messageElement.innerHTML =
 										"<b>" + pfp + dateString + ' ' + timeString + ' - ' + message.user + ":<br><br></b>&nbsp;" +
 										parseLinksAndEmojis(removeHtmlTags(message.message));
-									//document.getElementById("send-button").scrollIntoView();
-setTimeout(()=>{document.getElementById("send-button").scrollIntoView();},500);
+									//document.getElementById("latest").scrollIntoView();
+setTimeout(()=>{document.getElementById("latest").scrollIntoView();},500);
 								}
 							}
 
@@ -1460,8 +1452,8 @@ setTimeout(()=>{document.getElementById("send-button").scrollIntoView();},500);
 										messageElement.innerHTML =
 												"<b>" + pfp + '<button class="delete-button" data-message-id="' + snapshot.key + '"><i class="fa-sharp fa-solid fa-trash"></i></button> ' + dateString + ' ' + timeString + ' - ' + message.user + ":<br><br></b>&nbsp;" +
 												parseLinksAndEmojis(removeHtmlTags(message.message));
-											document.getElementById("send-button").scrollIntoView();
-setTimeout(()=>{document.getElementById("send-button").scrollIntoView();},500);
+											document.getElementById("latest").scrollIntoView();
+setTimeout(()=>{document.getElementById("latest").scrollIntoView();},500);
 										} else {
 											if (isUserOwner !== true) {
 												console.log("you aint za owner");
@@ -1471,8 +1463,8 @@ setTimeout(()=>{document.getElementById("send-button").scrollIntoView();},500);
 										messageElement.innerHTML =
 													"<b>" + pfp + dateString + ' ' + timeString + ' - ' + message.user + ":<br><br></b>&nbsp;" +
 													parseLinksAndEmojis(removeHtmlTags(message.message));
-												document.getElementById("send-button").scrollIntoView();
-setTimeout(()=>{document.getElementById("send-button").scrollIntoView();},500);
+												document.getElementById("latest").scrollIntoView();
+setTimeout(()=>{document.getElementById("latest").scrollIntoView();},500);
 											} else {
 												console.log("you za owner");
 												messageElement.classList.add("theirs");
@@ -1481,8 +1473,8 @@ setTimeout(()=>{document.getElementById("send-button").scrollIntoView();},500);
 										messageElement.innerHTML =
 													"<b>" + pfp + '<button class="delete-button" data-message-id="' + snapshot.key + '"><i class="fa-sharp fa-solid fa-trash"></i></button> ' + dateString + ' ' + timeString + ' - ' + message.user + ":<br><br></b>&nbsp;" +
 													parseLinksAndEmojis(removeHtmlTags(message.message));
-												document.getElementById("send-button").scrollIntoView();
-setTimeout(()=>{document.getElementById("send-button").scrollIntoView();},500);
+												document.getElementById("latest").scrollIntoView();
+setTimeout(()=>{document.getElementById("latest").scrollIntoView();},500);
 											}
 
 										}
@@ -1494,8 +1486,8 @@ setTimeout(()=>{document.getElementById("send-button").scrollIntoView();},500);
 										messageElement.innerHTML =
 										"<b>" + pfp + dateString + ' ' + timeString + ' - ' + message.user + ":<br><br></b>&nbsp;" +
 										parseLinksAndEmojis(removeHtmlTags(message.message));
-									document.getElementById("send-button").scrollIntoView();
-setTimeout(()=>{document.getElementById("send-button").scrollIntoView();},500);
+									document.getElementById("latest").scrollIntoView();
+setTimeout(()=>{document.getElementById("latest").scrollIntoView();},500);
 								}
 								setTimeout(function() {
 									document.querySelectorAll('.delete-button').forEach(function(button) {
@@ -1595,8 +1587,8 @@ setTimeout(()=>{document.getElementById("send-button").scrollIntoView();},500);
 									});
 								}, 80);
 								messagesList.appendChild(messageElement);
-								document.getElementById("send-button").scrollIntoView();
-setTimeout(()=>{document.getElementById("send-button").scrollIntoView();},500);
+								document.getElementById("latest").scrollIntoView();
+setTimeout(()=>{document.getElementById("latest").scrollIntoView();},500);
 							}, 80);
 							// Anti image exploitation
 							let mediaElements = document.querySelectorAll('img, audio, source');
