--- a/index.html
+++ b/index.html
@@ -332,6 +332,12 @@
 	<div id="changelog-container">
 		<ul>
       <li>
+				<h3>v1.5</h3>
+				<ul>
+					<li>The send and online users sections are now always at the bottom </li>
+				</ul>
+			</li>
+      <li>
 				<h3>v1.4</h3>
 				<ul>
 					<li>Added back and forward button to browser </li>
