The online uers list will not make a new line for every user anymore (will just be separated with commas) because it was messing with message displaying

--- a/browser.html
+++ b/browser.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Browser - Made by Elvin</title>
+    <title>Browser</title>
     <script src="https://kit.fontawesome.com/92f9e229dd.js" crossorigin="anonymous"></script>
     <style>
       /* Navigation drawer */
@@ -126,7 +126,7 @@
   </head>
   <body>
     <div id="header">
-			<h1 id="header">Browser</h1>
+			<h1 id="header">Browser - Made </h1>
 		</div>
     <br><br>
     <center>
