--- a/index.html
+++ b/index.html
@@ -332,6 +332,12 @@
 	<div id="changelog-container">
 		<ul>
       <li>
+				<h3>v1.6</h3>
+				<ul>
+					<li>The online uers list will not make a new line for every user anymore (will just be separated with commas) because it was messing with message displaying </li>
+				</ul>
+			</li>
+      <li>
 				<h3>v1.5</h3>
 				<ul>
 					<li>The send and online users sections are now always at the bottom </li>
